fix issue #2
- fix initialisation of villager trades for forge & neoforge for compat with other mods that modify villager trades